--- a/RentADriveMobile2/app/src/main/res/values/strings.xml
+++ b/RentADriveMobile2/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RentADrivewayMobile2</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">loginActivity</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
