--- a/RentADriveMobile2/app/src/main/res/values/strings.xml
+++ b/RentADriveMobile2/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RentADrivewayMobile2</string>
+    <string name="app_name">RentADriveway</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">loginActivity</string>
     <string name="title_activity_maps">Map</string>
